dialogs: regard title when calculating width, set document title to dialog title in order to aid visibility, introduce pagelayout js object and adjust personal notifications accordingly, fixes #10110
git-svn-id: svn://develop.studip.de/studip/trunk@55493 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/studip-base.css
+++ b/public/assets/stylesheets/studip-base.css
@@ -12463,14 +12463,6 @@ div.available-widgets .studip-widget {
   top: 50%;
   right: 34px;
 }
-.ui-dialog .ui-dialog-title {
-  margin-right: 48px;
-}
-.ui-dialog .with-wiki-link .ui-dialog-title {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  padding-right: 24px;
-}
 .studip-dialog-centered .ui-dialog-content {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
