--- a/resources/assets/stylesheets/less/dialog.less
+++ b/resources/assets/stylesheets/less/dialog.less
@@ -125,15 +125,6 @@
     top: 50%;
     right: 34px; // This is ugly but hard to avoid since the close button's position on a dialog is also hardcoded
 }
-.ui-dialog {
-    .ui-dialog-title {
-        margin-right: 48px; // Needs to be adjusted to the width of wiki icon
-    }
-    .with-wiki-link .ui-dialog-title {
-        box-sizing: border-box;
-        padding-right: 24px;
-    }
-}
 
 // Centered content in dialog
 .studip-dialog-centered .ui-dialog-content {
